--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "fs": "0.0.1-security",
     "moment": "^2.24.0",
     "node-spotify-api": "^1.0.7"
+  },
+  "devDependencies": {
+    "axios": ">=0.18.1"
   }
 }
