--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-spotify-api": "^1.0.7"
   },
   "devDependencies": {
-    "axios": ">=0.18.1"
+    "axios": ">=0.18.1",
+    "lodash": ">=4.17.13"
   }
 }
